Name: pipes-parse
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Parse-Library/issues
Synopsis: Parsing infrastructure for the pipes ecosystem
Description: This package defines the generic machinery necessary for common
    parsing tasks using @pipes@:
    .
    * /Termination Safety/: Detect and recover from end of input
    .
    * /Leftovers/: Save unused input for later consumption
    .
    * /Lens Support/: Zoom in on subsets of a stream using isomorphisms
    .
    @Pipes.Parse@ contains the full documentation for this library.
Category: Control, Pipes, Parsing
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Parse-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4       && < 5  ,
        lens         >= 3.9     && < 4.0,
        pipes        >= 4.0     && < 4.1,
        transformers >= 0.2.0.0 && < 0.4
    Exposed-Modules: Pipes.Parse
    GHC-Options: -O2 -Wall
