Name: pipes-parse
Version: 2.0.1
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Parse-Library/issues
Synopsis: Parsing infrastructure for the pipes ecosystem
Description: @pipes-parse@ builds upon the @pipes@ library to provide shared
    parsing idioms and utilities:
    .
    * /Perfect Streaming/: Program in a list-like style in constant memory
    .
    * /Leftovers/: Save unused input for later consumption
    .
    * /Connect and Resume/: Use @StateT@ to save unused input for later
    .
    * /Termination Safety/: Detect and recover from end of input
    .
    @Pipes.Parse@ contains the full documentation for this library.
Category: Control, Pipes, Parsing
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Parse-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4       && < 5  ,
        free         >= 3.1     && < 4.2,
        pipes        >= 4.0     && < 4.1,
        transformers >= 0.2.0.0 && < 0.4
    Exposed-Modules: Pipes.Parse
    GHC-Options: -O2 -Wall
